# tabletop-bot

./: .rusty-hook.toml  Cargo.toml  LICENSE  README.md  roll.ebnf
.github/workflows/: main.yml
src/: command.rs  db.rs  discord.rs  exit_on_err.rs  main.rs  scheduler.rs
src/commands/: exp.rs  experience.rs  mod.rs  mvp.rs  register_player.rs  resolve_mvp.rs  roll.rs  schedule.rs  test.rs
src/roll/: mod.rs  tests.rs
