[package]
name = "pathfinder-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
futures = "0.3"
log = "0.4"
peg = "0.8"
poise = "0.5"
pretty_env_logger = "0.5"
rand = "0.8"
r2d2 = "0.8"
r2d2_sqlite = "0.23"
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
env_logger = "0.10"
test-log = "0.2"

[features]
trace = ["peg/trace"]