[package]
name = "tabletop-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
timer = "0.2"
dotenvy = "0.15"
evaluroll = "0.1"
futures = "0.3"
log = "0.4"
peg = "0.8"
poise = "0.6"
pretty_env_logger = "0.5"
rand = "0.9"
rand_hc = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.28"
rusqlite = { version = "0.35", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
env_logger = "0.11"
once_cell = "1"
rayon = "1"
test-log = "0.2"
rusty-hook = "0.11.2"

[features]
# Traces the creation of the abstract syntax tree,
# and enables tracing in the peg crate.
trace = ["peg/trace"]
